:sparkles: Implement creating a Place

--- a/app/views/layouts/_hero.haml
+++ b/app/views/layouts/_hero.haml
@@ -18,5 +18,5 @@
       .navbar-item
         %span.icon
           %i.fas.fa-map-pin
-        = link_to 'Add', 'javascript:void(0)'
+        = link_to 'Add', new_place_path
       %a.navbar-item Sign out
