--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -9,6 +9,10 @@
     = javascript_include_tag 'application', 'data-turbolinks-track': 'reload'
     %script{ src: 'https://kit.fontawesome.com/f89a405bc5.js' }
   %body.has-navbar-fixed-bottom
+    - flash.each do |message_type, message|
+      = content_tag :div, class: "notification is-#{message_type}" do
+        = content_tag :button, nil, class: 'delete'
+        = message
     = render 'layouts/hero'
     %section.elyer-body
       = render 'layouts/menu'
