:bento: Make container that houses side nav and main view to be a container only when in full HD

--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -14,6 +14,7 @@
         = content_tag :button, nil, class: 'delete'
         = message
     = render 'layouts/hero'
-    %section.elyer-body
-      = render 'layouts/menu'
-      = yield
+    %section.section
+      .container.is-fullhd.elyer-body
+        = render 'layouts/menu'
+        = yield
