--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -14,6 +14,7 @@
         = content_tag :button, nil, class: 'delete'
         = message
     = render 'layouts/hero'
+    = render 'layouts/navbar'
     %section.section
       .container.is-fullhd.elyer-body
         = render 'layouts/menu'
