:bento: Occupy the main view by the contents

--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -18,4 +18,5 @@
     %section.section
       .container.is-fullhd.elyer-body
         = render 'layouts/menu'
-        = yield
+        .container
+          = yield
