Home page index page (#6) [Finishes #167363405]
* :white_check_mark: Update Pages system test to include index page testing

* :sparkles: Update Place factory to return more meaningful values

* :bento: Make container that houses side nav and main view to be a container only when in full HD

* :bento: Do not use maximum width on the side navigation

* :construction: Add PagesController#index

* :bento: Create home page index view to display all places in the website

* :bento: Separate hero and navbar partials into their own

* :bento: Occupy the main view by the contents

* :bento: Create a CSS element to take care of centering elements in a wide area view (e.g. main view)

* :bento: Apply .main-view on Pages home page

* :bento: Update _no_places_yet.haml to adjust notice width

--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -14,6 +14,9 @@
         = content_tag :button, nil, class: 'delete'
         = message
     = render 'layouts/hero'
-    %section.elyer-body
-      = render 'layouts/menu'
-      = yield
+    = render 'layouts/navbar'
+    %section.section
+      .container.is-fullhd.elyer-body
+        = render 'layouts/menu'
+        .container
+          = yield
