--- a/app/views/places/_place.haml
+++ b/app/views/places/_place.haml
@@ -1,10 +1,17 @@
 %article.card
+  %header.card-header.is-centered
+    %p.card-header-title.has-text-info.is-unselectable #{place.name}
+    = link_to edit_place_path(place), class: 'card-header-icon',
+      'aria-label' => 'more-options' do
+      %span.icon
+        %i.fas.fa-edit{ 'aria-hidden': true }
+      EDIT
   .card-image
     %figure.image
       = image_tag 'https://picsum.photos/600'
   .card-content
-    %h1.title #{place.name}
-    %h2.subtitle #{place.description}
+    %h1.title.has-text-grey-light #{place.name}
+    %h2.subtitle #{place.address}
 
     .content
-      Location: #{place.address}
+      #{place.description}
