:wrench: Redirect to home page when 'Home' in the navbar is clicked

--- a/app/views/layouts/_navbar.haml
+++ b/app/views/layouts/_navbar.haml
@@ -8,7 +8,7 @@
       %span{ 'aria-hidden': 'true' }
   .navbar-menu#navBar
     .navbar-start
-      %a.navbar-item Home
+      = link_to 'Home', root_path, class: 'navbar-item'
     .navbar-end
       .navbar-item
         %span.icon
