--- a/app/views/layouts/_navbar.haml
+++ b/app/views/layouts/_navbar.haml
@@ -2,11 +2,11 @@
   .navbar-brand
     %a.navbar-item{ href: '/' }
       %img{ :src => "https://picsum.photos/200" }
-    %a.navbar-burger.burger{ role: 'button', 'aria-label': 'menu', 'aria-expanded': 'false', data: { target: 'navBar' } }
+    %a.navbar-burger.burger{ role: 'button', 'aria-label': 'menu', 'aria-expanded': 'false', data: { target: 'navMenu' } }
       %span{ 'aria-hidden': 'true' }
       %span{ 'aria-hidden': 'true' }
       %span{ 'aria-hidden': 'true' }
-  .navbar-menu#navBar
+  .navbar-menu#navMenu
     .navbar-start
       = link_to 'Home', root_path, class: 'navbar-item'
     .navbar-end
