--- a/app/views/places/_place.haml
+++ b/app/views/places/_place.haml
@@ -14,3 +14,7 @@
       %h1.title.has-text-grey-light #{place.name}
       %h2.subtitle #{place.address}
       .content #{place.description}
+    .card-footer
+      %p.card-footer-item.has-text-primary Mobile:&nbsp#{link_to place.mobile, "tel:#{place.mobile}"}
+      %p.card-footer-item.has-text-warning Landline:&nbsp#{link_to place.landline, "tel:#{place.landline}"}
+      %p.card-footer-item.has-text-info Email:&nbsp#{mail_to place.email}
