:bento::configuration::sparkle: Use image helper method (PlacesHelper#place_photos) to automatically display a no image photo if a place has no main photo

--- a/app/views/places/_place.haml
+++ b/app/views/places/_place.haml
@@ -9,7 +9,7 @@
         EDIT
     .card-image
       %figure.image
-        = image_tag 'https://picsum.photos/600'
+        = image_tag place_photos(place.main_photo)
     .card-content
       %h1.title.has-text-grey-light #{place.name}
       %h2.subtitle #{place.address}
