:bento: Add title to new place form

--- a/app/views/places/new.html.haml
+++ b/app/views/places/new.html.haml
@@ -1,3 +1,4 @@
+%h1.title.is-marginless.has-text-primary Submit a place
 %section.section
   .container
     = form_with model: @place, id: :new_place, local: true do |form|
