:bento::construction: Make side navbar disappear when on responsive mode

--- a/app/views/layouts/_menu.haml
+++ b/app/views/layouts/_menu.haml
@@ -1,4 +1,6 @@
-%aside.menu
+%aside.menu.is-hidden-mobile
+  %p.menu-label
+    = link_to 'Home', root_path
   %p.menu-label Account
   %ul.menu-list
     %li
