--- a/app/views/layouts/_navbar.haml
+++ b/app/views/layouts/_navbar.haml
@@ -1,14 +1,16 @@
-%nav.navbar.is-spaced.is-fixed-bottom{ role: 'navigation', 'aria-label': 'main navigation' }
+%nav.navbar.is-spaced.is-fixed-top{ role: 'navigation', 'aria-label': 'main navigation' }
   .navbar-brand
     %a.navbar-item{ href: '/' }
-      %img{ :src => "https://picsum.photos/200" }
+      = image_tag 'gikan'
     %a.navbar-burger.burger{ role: 'button', 'aria-label': 'menu', 'aria-expanded': 'false', data: { target: 'navMenu' } }
       %span{ 'aria-hidden': 'true' }
       %span{ 'aria-hidden': 'true' }
       %span{ 'aria-hidden': 'true' }
   .navbar-menu#navMenu
     .navbar-start
-      = link_to 'Home', root_path, class: 'navbar-item'
+      = link_to 'Balai', root_path, class: 'navbar-item'
+      = link_to 'Account', nil, class: 'navbar-item'
+      = link_to 'Your Contributions', nil, class: 'navbar-item'
     .navbar-end
       .navbar-item
         %span.icon
