--- a/app/views/places/_place.haml
+++ b/app/views/places/_place.haml
@@ -3,7 +3,7 @@
     %header.card-header
       %p.card-header-title.has-text-primary.is-unselectable #{place.name}
       = link_to 'More Details', place,
-        class: 'card-header-icon has-text-info has-text-weight-semibold'
+        class: 'card-header-icon has-text-info is-size-7-mobile has-text-weight-bold'
       = link_to edit_place_path(place), class: 'card-header-icon',
         'aria-label' => 'more-options' do
         %span.icon
