Add images section in place show page (#22) [Finishes #167415953]
* :bento::wrench::sparkles: Add helper to display content only when in the place show page

* :bento: Render content in a place card only when in the home page

* :white_check_mark: Add #main_photo as an attachment in Place

* :white_check_mark::bento: Update PlacesHelperTest to include checking of #place_photos

* :bento: Add a no image placeholder for non existing photos

* :sparkles::construction: Add PlacesHelper#place_photos

* :wrench: Fix argument spacing in AttachmentsHelper

* :bento::configuration::sparkle: Use image helper method (PlacesHelper#place_photos) to automatically display a no image photo if a place has no main photo

* :construction::sparkles: Add :main_photo in PlacesController#places_params

* :white_check_mark: Update Place system test for uploading main photos

* :bento::sparkles::construction: Add file upload for main photo in place new form

* :bento: Add helper in ApplicationHelper to determine if a resource has a main photo

* :bento::construction::sparkles: Add conditional rendering if a reosurce has a main photo then display the file name in the upload icon

* :bento: Add 'More Details' link in Place card

* :heavy_plus_sign: Add MiniMagick

* :truck: Delete elyer-body class in favour of using .is-flex-tablet Bulma helper class

* :bento: Add Gikan logo in assets directory

* :bento: Adjust hero to small size

* :bento: Add helper class for flash messages to add top margin when not on mobile mode

This adds margin to the top because of the spaced navbar. The flash
message notice gets blocked by it. So the helper class adds an extra
margin at the top of the notification to help it push downward so it
will be visible.

* :bento: Add title to new place form

* :bento: Make image in place card to redirect to show place page

* :bento::construction: Make side navbar disappear when on responsive mode

* :bento::construction: Ov

--- a/app/views/places/new.html.haml
+++ b/app/views/places/new.html.haml
@@ -1,6 +1,22 @@
+%h1.title.is-marginless.has-text-primary Submit a place
 %section.section
   .container
     = form_with model: @place, id: :new_place, local: true do |form|
+      .field.is-horizontal
+        .field-label.is-large
+          = form.label :main_photo, class: 'label'
+        .field-body
+          .file.is-info.is-boxed
+            %label.file-label
+              = form.file_field :main_photo, class: 'file-input'
+              %span.file-cta
+                %span.file-icon
+                  %i.fas.fa-cloud-upload-alt
+                %span.file-label Upload main photo
+              = has_main_photo?(@place) do
+                %span.file-name.is-centered
+                  = @place.main_photo.filename
+
       .field.is-horizontal
         .field-label.is-normal
           = form.label :name, class: 'label'
@@ -58,7 +74,7 @@
 
       .field.is-horizontal
         .field-label.is-medium
-          = form.label :images, 'Upload images', class: 'label'
+          = form.label :images, 'Upload more images', class: 'label'
         .field-body
           .field
             .control
