--- a/app/views/places/_place.haml
+++ b/app/views/places/_place.haml
@@ -1,15 +1,18 @@
 %article{ class: place_layout_class }
   %article.card
     %header.card-header
-      = link_to place.name, place, class: 'card-header-title has-text-info'
+      %p.card-header-title.has-text-primary.is-unselectable #{place.name}
+      = link_to 'More Details', place,
+        class: 'card-header-icon has-text-info is-size-7-mobile has-text-weight-bold'
       = link_to edit_place_path(place), class: 'card-header-icon',
         'aria-label' => 'more-options' do
         %span.icon
           %i.fas.fa-edit{ 'aria-hidden': true }
         EDIT
     .card-image
-      %figure.image
-        = image_tag 'https://picsum.photos/600'
+      = link_to place do
+        %figure.image
+          = image_tag place_photos(place.main_photo)
     .card-content
       %h1.title.has-text-grey-light #{place.name}
       %h2.subtitle #{place.address}
@@ -18,3 +21,5 @@
       %p.card-footer-item.has-text-primary Mobile:&nbsp#{link_to place.mobile, "tel:#{place.mobile}"}
       %p.card-footer-item.has-text-warning Landline:&nbsp#{link_to place.landline, "tel:#{place.landline}"}
       %p.card-footer-item.has-text-info Email:&nbsp#{mail_to place.email}
+      = render_only_on_home_page do
+        = link_to 'More images', place, class: 'card-footer-item'
