:bento: Apply home-page-item class directly on place card and not use a helper

--- a/app/views/places/_place.haml
+++ b/app/views/places/_place.haml
@@ -1,4 +1,4 @@
-%article{ class: place_layout_class }
+%article.home-page-item
   %article.card
     %header.card-header
       %p.card-header-title.has-text-primary.is-unselectable #{place.name}
