--- a/app/views/places/show.html.haml
+++ b/app/views/places/show.html.haml
@@ -6,6 +6,11 @@
           = link_to root_path do
             %span.icon
               %i.fas.fa-arrow-circle-left
+        = link_to @place, class: 'card-header-icon is-paddingless',
+          'aria-label' => 'more-options', method: :delete,
+          data: { confirm: "Are you sure you want to delete #{@place.name}?" } do
+          %span.icon
+            %i.fas.fa-trash{ 'aria-hidden': true }
         = link_to edit_place_path(@place), class: 'card-header-icon',
           'aria-label' => 'more-options' do
           %span.icon
@@ -13,7 +18,7 @@
           EDIT
       .card-image
         %figure.image
-          = image_tag place_photos(@place.main_photo),
+          = image_tag place_photos(@place.main_photo).variant(resize: '400x300'),
             class: 'place-image',
             data: { image: url_for(place_photos(@place.main_photo)) }
       .card-content
