--- a/app/views/places/show.html.haml
+++ b/app/views/places/show.html.haml
@@ -18,9 +18,9 @@
           EDIT
       .card-image
         %figure.image.is-clickable
-          = image_tag place_photos(@place.main_photo).variant(resize: '400x300'),
+          = image_tag place_main_photo(@place.main_photo),
             class: 'place-image',
-            data: { image: url_for(place_photos(@place.main_photo)) }
+            data: { image: url_for(place_main_photo(@place.main_photo)) }
       .card-content
         %h1.title.has-text-grey-light #{@place.name}
         %h2.subtitle #{@place.address}
