--- a/app/views/users/new.haml
+++ b/app/views/users/new.haml
@@ -1,8 +1,10 @@
-#clearance.sign-up
-  %h2= t(".title")
-  = form_for @user do |form|
-    = render partial: '/users/form', object: form
-    .submit-field
-      = form.submit
-    .other-links
-      = link_to t(".sign_in"), sign_in_path
+%head
+  = stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track': 'reload'
+  %script{ src: 'https://kit.fontawesome.com/f89a405bc5.js' }
+
+%section.hero.is-info.is-fullheight
+  .hero-body
+    .container
+      %h1.title.has-text-centered= t('.title')
+      = form_with model: @user, local: true, class: 'sign-up-form' do |form|
+        = render partial: 'form', locals: { form: form, user: @user }
