:white_check_mark: Fix failing spec for account creation system test

--- a/app/assets/stylesheets/users.scss
+++ b/app/assets/stylesheets/users.scss
@@ -1,5 +1,5 @@
 @media only screen and (min-width: 768px) {
-  .sign-up-form {
+  .user-authentication-form {
     margin: auto;
     width: 30%;
   }
