--- a/app/views/layouts/_navbar.haml
+++ b/app/views/layouts/_navbar.haml
@@ -12,12 +12,12 @@
       = link_to 'Account', nil, class: 'navbar-item'
       = link_to 'Your Contributions', nil, class: 'navbar-item'
     .navbar-end
-      .navbar-item
-        %span.icon
-          %i.fas.fa-map-pin
-        = link_to 'Add', new_place_path, class: 'new-place-link'
       - if signed_in?
-        = link_to 'Sign out', sign_out_path, class: 'navbar-item sign-out-link'
+        .navbar-item.new-place-link
+          %span.icon
+            %i.fas.fa-map-pin
+          = link_to 'Add', new_place_path
+        = link_to 'Sign out', 'javascript:void(0)', class: 'navbar-item sign-out-link'
       - else
         = link_to 'Sign up', signup_path, class: 'navbar-item sign-up-link'
         = link_to 'Sign in', sign_in_path, class: 'navbar-item sign-in-link'
