:white_check_mark: Conditional rendering of user profile and contributions in the navbar and sidebar

--- a/app/views/layouts/_navbar.haml
+++ b/app/views/layouts/_navbar.haml
@@ -9,8 +9,9 @@
   .navbar-menu#navMenu
     .navbar-start
       = link_to 'Balai', root_path, class: 'navbar-item'
-      = link_to 'Account', nil, class: 'navbar-item'
-      = link_to 'Your Contributions', nil, class: 'navbar-item'
+      - if signed_in?
+        = link_to 'Account', nil, class: 'navbar-item account-link'
+        = link_to 'Your Contributions', nil, class: 'navbar-item user-contributions-link'
     .navbar-end
       - if signed_in?
         .navbar-item.new-place-link
