--- a/app/views/layouts/_menu.haml
+++ b/app/views/layouts/_menu.haml
@@ -1,11 +1,15 @@
 %aside.menu.is-hidden-mobile
   %p.menu-label
     = link_to 'Home', root_path
-  %p.menu-label Account
-  %ul.menu-list
-    %li
-      = link_to 'Profile', 'javascript:void(0)'
-  %p.menu-label Places
-  %ul.menu-list
-    %li
-      = link_to 'Your Contributions', 'javascript:void(0)'
+  - if signed_in?
+    %p.menu-label Account
+    %ul.menu-list
+      %li
+        = link_to 'Profile', 'javascript:void(0)', class: 'menu-item profile-link'
+  - if signed_in?
+    %p.menu-label Places
+    %ul.menu-list
+      %li
+        = link_to 'Your Contributions',
+                  'javascript:void(0)',
+                  class: 'menu-item user-contributions-link'
