--- a/app/views/places/_place.haml
+++ b/app/views/places/_place.haml
@@ -5,7 +5,7 @@
       = link_to 'More Details', place,
         class: 'card-header-icon has-text-info is-size-7-mobile has-text-weight-bold'
       - if authorized_to(:edit?, place)
-        = link_to edit_place_path(place), class: 'card-header-icon',
+        = link_to edit_place_path(place), class: 'card-header-icon edit-place-link',
           'aria-label' => 'more-options' do
           %span.icon
             %i.fas.fa-edit{ 'aria-hidden': true }
