:white_check_mark: Inlcude conditional rendering of delete link in Place show page

--- a/app/views/places/show.haml
+++ b/app/views/places/show.haml
@@ -7,11 +7,12 @@
           = link_to root_path do
             %span.icon
               %i.fas.fa-arrow-circle-left
-        = link_to @place, class: 'card-header-icon is-paddingless',
-          'aria-label' => 'more-options', method: :delete,
-          data: { confirm: "Are you sure you want to delete #{@place.name}?" } do
-          %span.icon
-            %i.fas.fa-trash{ 'aria-hidden': true }
+        - if authorized_to(:destroy?, @place)
+          = link_to @place, class: 'card-header-icon is-paddingless trash-can-link',
+            'aria-label' => 'more-options', method: :delete,
+            data: { confirm: "Are you sure you want to delete #{@place.name}?" } do
+            %span.icon
+              %i.fas.fa-trash{ 'aria-hidden': true }
         - if authorized_to(:edit?, @place)
           = link_to edit_place_path(@place), class: 'card-header-icon edit-place-link',
             'aria-label' => 'more-options' do
