--- a/app/views/places/_place.haml
+++ b/app/views/places/_place.haml
@@ -4,11 +4,12 @@
       %p.card-header-title.has-text-primary.is-unselectable #{place.name}
       = link_to 'More Details', place,
         class: 'card-header-icon has-text-info is-size-7-mobile has-text-weight-bold'
-      = link_to edit_place_path(place), class: 'card-header-icon',
-        'aria-label' => 'more-options' do
-        %span.icon
-          %i.fas.fa-edit{ 'aria-hidden': true }
-        EDIT
+      - if authorized_to(:edit?, place)
+        = link_to edit_place_path(place), class: 'card-header-icon edit-place-link',
+          'aria-label' => 'more-options' do
+          %span.icon
+            %i.fas.fa-edit{ 'aria-hidden': true }
+          EDIT
     .card-image
       = link_to place do
         %figure.image
