--- a/app/views/places/show.haml
+++ b/app/views/places/show.haml
@@ -1,3 +1,4 @@
+- apply_padding = signed_in?
 .columns
   .column.is-one-third
     %article.card
@@ -6,16 +7,18 @@
           = link_to root_path do
             %span.icon
               %i.fas.fa-arrow-circle-left
-        = link_to @place, class: 'card-header-icon is-paddingless',
-          'aria-label' => 'more-options', method: :delete,
-          data: { confirm: "Are you sure you want to delete #{@place.name}?" } do
-          %span.icon
-            %i.fas.fa-trash{ 'aria-hidden': true }
-        = link_to edit_place_path(@place), class: 'card-header-icon',
-          'aria-label' => 'more-options' do
-          %span.icon
-            %i.fas.fa-edit{ 'aria-hidden': true }
-          EDIT
+        - if authorized_to(:destroy?, @place)
+          = link_to @place, class: 'card-header-icon is-paddingless trash-can-link',
+            'aria-label' => 'more-options', method: :delete,
+            data: { confirm: "Are you sure you want to delete #{@place.name}?" } do
+            %span.icon
+              %i.fas.fa-trash{ 'aria-hidden': true }
+        - if authorized_to(:edit?, @place)
+          = link_to edit_place_path(@place), class: 'card-header-icon edit-place-link',
+            'aria-label' => 'more-options' do
+            %span.icon
+              %i.fas.fa-edit{ 'aria-hidden': true }
+            EDIT
       .card-image
         %figure.image.is-clickable
           = image_tag place_main_photo(@place.main_photo),
