:lipstick::tada::sparkles: Implement "Your Contributions" page

--- a/app/views/layouts/_menu.haml
+++ b/app/views/layouts/_menu.haml
@@ -11,5 +11,5 @@
     %ul.menu-list
       %li
         = link_to 'Your Contributions',
-                  'javascript:void(0)',
+                  places_user_path(current_user),
                   class: 'menu-item user-contributions-link'
