--- a/app/views/layouts/_menu.haml
+++ b/app/views/layouts/_menu.haml
@@ -5,7 +5,7 @@
     %p.menu-label Account
     %ul.menu-list
       %li
-        = link_to 'Profile', 'javascript:void(0)', class: 'menu-item profile-link'
+        = link_to 'Profile', current_user, class: 'menu-item profile-link'
   - if signed_in?
     %p.menu-label Places
     %ul.menu-list
