Account and Your Contributions page (#45) [Finishes #170304679]
* :lipstick::tada::sparkles: Implement "Your Contributions" page

* :white_check_mark::fire: Remove test for class helpers in PlacesHelper

* :wrench: Fix including testing helpers in Cucumber step definitions

See: https://cucumber.io/docs/cucumber/state/#world-object

* :sparkles: Create new abstract common step definitions

* :wrench: Remove default layout for Clearance::UsersController

* :sparkles::tada::lipstick: Implement user account page

* :recycle::art: Refactor common steps in Cucumber by extracting into its own module

* :sparkles: Implement updating a user account

* :sparkles: Add User avatar

--- a/app/views/layouts/_navbar.haml
+++ b/app/views/layouts/_navbar.haml
@@ -10,8 +10,8 @@
     .navbar-start
       = link_to 'Balai', root_path, class: 'navbar-item'
       - if signed_in?
-        = link_to 'Account', nil, class: 'navbar-item account-link'
-        = link_to 'Your Contributions', nil, class: 'navbar-item user-contributions-link'
+        = link_to 'Account', current_user, class: 'navbar-item account-link'
+        = link_to 'Your Contributions', places_user_path(current_user), class: 'navbar-item user-contributions-link'
     .navbar-end
       - if signed_in?
         .navbar-item.new-place-link
