--- a/app/views/layouts/_menu.haml
+++ b/app/views/layouts/_menu.haml
@@ -5,11 +5,11 @@
     %p.menu-label Account
     %ul.menu-list
       %li
-        = link_to 'Profile', 'javascript:void(0)', class: 'menu-item profile-link'
+        = link_to 'Profile', current_user, class: 'menu-item profile-link'
   - if signed_in?
     %p.menu-label Places
     %ul.menu-list
       %li
         = link_to 'Your Contributions',
-                  'javascript:void(0)',
+                  places_user_path(current_user),
                   class: 'menu-item user-contributions-link'
