--- a/app/views/layouts/application.haml
+++ b/app/views/layouts/application.haml
@@ -14,7 +14,5 @@
         = message
     = render 'layouts/navbar'
     %section.section
-      .container.is-fullhd.is-flex-tablet
-        = render 'layouts/menu'
-        .container
-          = yield
+      .container.is-fullhd
+        = yield
