--- a/app/views/places/show.haml
+++ b/app/views/places/show.haml
@@ -37,14 +37,14 @@
 
   .column
     .title.is-5.has-text-primary More Images
-    - if @place.images.attached?
+    - if @place.photos.any?
       .subtitle.is-7.has-text-info click images to view
       .columns.is-multiline.is-vcentered
-        - @place.images.each do |image|
+        - @place.photos.each do |photo|
           .column.is-one-third
             .box
               %figure.image.is-clickable
-                = image_tag image.variant(resize: '200x200'), class: 'place-image', data: { image: url_for(image) }
+                = image_tag photo.photo.variant(resize: '200x200'), class: 'place-image', data: { image: url_for(photo.photo) }
     - else
       .container
         %article.message.is-link
